--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
     "koa-compress": "^5.1.0",
+    "koa-jwt": "^4.0.3",
     "koa-logger": "^3.2.1",
     "koa-router": "^10.1.1",
+    "koa2-cors": "^2.0.6",
     "mysql2": "^2.3.2",
     "sequelize": "^6.7.0"
   },
