--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-jwt": "^4.0.3",
     "koa-logger": "^3.2.1",
     "koa-router": "^10.1.1",
+    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "mysql2": "^2.3.2",
     "sequelize": "^6.7.0"
