--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-compress": "^5.1.0",
     "koa-jwt": "^4.0.3",
     "koa-logger": "^3.2.1",
+    "koa-parameter": "^3.0.1",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
